--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
   flutter:
     sdk: flutter
   stacked: ^3.0.0
+  stacked_hooks: ^0.2.2
+
   logger: ^1.1.0
   injectable: ^1.5.3
   get_it: ^7.2.0
   mockito: ^5.3.2
   google_maps_flutter: ^2.2.1
+  flutter_hooks_test: ^0.0.2
 
   path_provider: ^2.0.11
 
