--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.danpyk.field_drawer">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
    <application
         android:label="field_drawer"
         android:name="${applicationName}"
@@ -8,7 +12,6 @@
 
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="${apiKey}" />
-
        <activity
             android:name=".MainActivity"
             android:exported="true"
