--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   mockito: ^5.3.2
   google_maps_flutter: ^2.2.1
   flutter_hooks_test: ^0.0.2
+  internet_connection_checker: ^1.0.0+1
+  equatable: ^2.0.5
+  permission_handler: ^10.1.0
 
   path_provider: ^2.0.11
 
@@ -50,6 +53,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   json_serializable: ^6.5.0
   json_annotation: ^4.7.0
   build_runner: ^2.2.1
@@ -74,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/entries/entry.json
+     - assets/entries/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
