--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,26 +19,25 @@ dependencies:
   injectable: ^1.5.3
   get_it: ^7.2.0
   mockito: ^5.3.2
+
   google_maps_flutter: ^2.2.1
   internet_connection_checker: ^1.0.0+1
   equatable: ^2.0.5
   permission_handler: ^9.2.0
   flutter_native_splash: ^2.2.11
-
   path_provider: ^2.0.11
 
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  json_serializable: ^6.5.0
+  lints: ^2.0.0
   json_annotation: ^4.7.0
+#generators
+  json_serializable: ^6.5.0
   build_runner: ^2.2.1
   stacked_generator: ^0.8.0+1
 
-  lints: ^2.0.0
 
 flutter:
 
@@ -46,7 +45,7 @@ flutter:
   uses-material-design: true
 
   assets:
-     - assets/entries/
+    - assets/entries/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
